    ``RB_ID=832816``

  * util-core: `c.t.util.NoStacktrace` is removed. Use `scala.util.control.NoStackTrace` instead.
    ``RB_ID=833188``

  * util-core: Add `Future.joinWith` that also accepts a function `(A, B) => C` for mapping
    a joined result. ``RB_ID=838169``

  * util-core: Add `Future.by(Time)`, complementary to the existing `Future.within(Duration)`
    ``RB_ID=838169``

  * util-security: Added new project. ``RB_ID=843070``

API Changes:

  * Builds are now only for Java 8 and Scala 2.11. See the
    `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
    for details. ``RB_ID=828898``

  * util-core: `c.t.u.Bijection` is removed. use `c.t.bijection.Bijection`
    (https://github.com/twitter/bijection) instead. ``RB_ID=834383``

  * util-core: Deprecated method `Future.get()` has been removed because it made it
    too easy to hide blocking code. Replaced usage with the more explicit
    `com.twitter.util.Await.result(Future)`. ``RB_ID=833579``

  * util-core: Deprecated method `Future.get(Duration): Try` has been removed because it
    made it too easy to hide blocking code. Replaced usage with the more explicit
    `com.twitter.util.Await.result(Future.liftToTry)`. ``RB_ID=836066``

  * util-core: Deprecated methods `Future.isReturn` and `Future.isThrow` have been
    removed because they made it too easy to hide blocking code. Replaced usage with
    the more explicit `Await.result(Future.liftToTry).isReturn` and
    `Await.result(Future.liftToTry).isThrow`. ``RB_ID=837329``

  * util-lint: Added methods `com.twitter.util.lint.Rules.removeById(String)` and
    `com.twitter.util.lint.RulesImpl.removeById(String)` so that it is now possible
    to remove a `com.twitter.util.lint.Rule` from the `com.twitter.util.lint.GlobalRules`
    set. ``RB_ID=840753``

Bug Fixes:

  * util-core: AsyncMeter had a bug where if the burst size was smaller than
    the number of disbursed tokens, it would discard all of the tokens over